# harmony-web-sdk

./: .eslintignore  .eslintrc  .gitmodules  .nano-staged.json  .npmignore  Cargo.toml  LICENSE_MIT  README.md  buf.gen.yaml  build.rs  genprotos.sh  harmony-dev-harmony-web-sdk-0.0.3-alpha.0.tgz  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: default.yml  test.yml
protocol/: fetch.pb.ts
protocol/auth/v1/: auth.pb.ts  auth.ts  auth_pb.d.ts  auth_pb.js  auth_pb_service.js  output.d.ts  output.js
protocol/chat/v1/: channels.pb.ts  channels.ts  channels_pb.js  channels_pb_service.d.ts  chat.pb.ts  chat.ts  chat_pb.js  chat_pb_service.d.ts  chat_pb_service.js  emotes.pb.ts  emotes.ts  emotes_pb.js  guilds.pb.ts  guilds.ts  guilds_pb.d.ts  guilds_pb.js  guilds_pb_service.d.ts  messages.pb.ts  messages.ts  messages_pb.d.ts  output.d.ts  output.js  permissions.pb.ts  permissions.ts  postbox.ts  profile.pb.ts  profile.ts  profile_pb.d.ts  profile_pb.js  profile_pb_service.js  streaming.pb.ts  streaming.ts  streaming_pb.d.ts  streaming_pb.js
protocol/core/v1/: core_pb.d.ts  core_pb.js  core_pb_service.d.ts  core_pb_service.js
protocol/foundation/v1/: foundation_pb.js  foundation_pb_service.d.ts  foundation_pb_service.js
protocol/google/protobuf/: any.ts  descriptor.ts  empty.ts  timestamp.ts
protocol/harmonytypes/v1/: output.d.ts  output.js  types.pb.ts  types.ts  (+2 more)
src/: chat.ts  connection.ts  harmonystream.ts  hrpcTransport.ts  lib.rs
src/__test__/: connection.test.ts
test/: import.test.ts
(+15 files in other folders)
