[package]
name = "harmony-web-sdk"
version = "0.1.0"
authors = ["Danil Korennykh <bluskript@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
prost = "0.7"
prost-types = "0.7"
bytes = "1"

[build-dependencies]
prost-build = { version = "0.7" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
